replace menu scene to menu controllere refactoring